--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   get: 4.6.5
   flutter: 
     sdk: flutter
+  http: ^0.13.5
+  lottie: ^1.4.2
+  geolocator: ^9.0.1
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
