--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   lottie: ^1.4.2
   geolocator: ^9.0.1
   flutter_native_splash: ^2.2.8
+  internet_connection_checker: ^0.0.1+4
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
